--- a/NatureBasketBoutique/Areas/Customer/Views/Cart/Index.cshtml
+++ b/NatureBasketBoutique/Areas/Customer/Views/Cart/Index.cshtml
@@ -34,9 +34,17 @@
                                 </div>
 
                                 <div class="flex items-center border border-gray-300 rounded">
-                                    <a asp-action="Minus" asp-route-cartId="@item.Id" class="px-3 py-1 bg-gray-100 hover:bg-gray-200 text-gray-600">-</a>
-                                    <span class="px-3 py-1 font-bold text-gray-700">@item.Count</span>
-                                    <a asp-action="Plus" asp-route-cartId="@item.Id" class="px-3 py-1 bg-gray-100 hover:bg-gray-200 text-green-600">+</a>
+                                    <a asp-action="Plus" asp-route-cartId="@item.Id" asp-route-productId="@item.ProductId" class="btn btn-primary">
+                                        <i class="bi bi-plus-square"></i>
+                                    </a>
+
+                                    <a asp-action="Minus" asp-route-cartId="@item.Id" asp-route-productId="@item.ProductId" class="btn btn-warning">
+                                        <i class="bi bi-dash-square"></i>
+                                    </a>
+
+                                    <a asp-action="Remove" asp-route-cartId="@item.Id" asp-route-productId="@item.ProductId" class="btn btn-danger">
+                                        <i class="bi bi-trash-fill"></i>
+                                    </a>
                                 </div>
 
                                 <div class="text-green-700 font-bold w-20 text-right">
